src/style.css
/* 
======================
# IMPORTS 
======================
*/

/* Tailwind import */
@import 'tailwindcss';
/* Font import (Montserrat & Special Gothic Expanded One) */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Special+Gothic+Expanded+One&display=swap');


/* 
======================
# CSS CUSTOM PROPERTIES 
======================
*/
@theme {
    /* Typography */
    --font-heading: "Special Gothic Expanded One", sans-serif;          /* For headings (Album name, buttons, Stream/Track, etc) */
    --font-body: "Montserrat", sans-serif;                              /* For general body font */
    /* Colors */
    --color-accent: #679E85;                                            /* [Green] accent color for buttons */
    --color-primary: #fdfdfd;                                           /* [White-ish] for text and icons */
    --color-secondary: #383838;                                         /* [Grey] for News (?) */
    --color-background: #000;                                           /* [Black] for background */

    --breakpoint-sm: 33rem;
    --breakpoint-md: 48rem;
    --breakpoint-ml: 62rem;
    --breakpoint-lg: 74rem;
    --breakpoint-xl: 90rem;
    --breakpoint-2xl: 120rem;
}


/* 
======================
# SHARED CLASSES
======================
*/

/* Base */
body {
    @apply
        overflow-x-hidden
        min-h-screen box-border
        m-0 p-0
        font-heading text-base tracking-wider leading-normal text-primary
        bg-background
}

/* Wrappers */
.main-wrapper { /* For whole site */
    @apply
        relative z-10
        flex flex-col items-center
        w-full mt-28 px-4

        md:mt-48
}
.topnav-wrapper { /* For topbar navigation */
    @apply
        flex justify-center
}

/* Images & Icons */
.topnav-logo { /* Logo for topbar */
    @apply
        w-9 p-1.5 
        bg-background 
        
        sm:w-12 sm:p-1.5
}
.sidenav-logo { /* Logo for sidenav */
    @apply
        w-11
}
.nav-social-icon { /* Social icons for navigation */
    @apply
        w-4.5
}
.close-icon { /* Sidemenu close button icon */
    @apply
        w-9
}
.background-img {
    @apply
        absolute top-0 left-0 right-0
        h-[110vh]
        bg-cover bg-center bg-no-repeat
        blur opacity-40 scale-x-105
        bg-[linear-gradient(to_bottom,transparent_50%,theme(colors.background)),url(/salvatore-andrea-santacroce-Nc0xNgW3G-k-unsplash.jpg)]
}

/* Links and buttons */
.nav-link { /* Navigation link */
    @apply
        flex items-center gap-2.5
        text-[17px]
}
.nav-link img { /* Nav-link sub-menu arrow */
    @apply
        w-4.5
}
.button {
    @apply
        pr-7 pl-6 py-3.5
        text-xs
        border-2 
        transition
        hover:text-background hover:bg-primary
}

/* Navigation */
.topnav { /* Mobile top bar navigation */
    @apply
        fixed z-50
        flex flex-col gap-11.5
        w-full pl-3.5 pr-3 py-2
        bg-background/40 backdrop-blur-sm

        sm:pl-4.5 sm:py-2.5
        lg:max-w-[78rem] lg:bg-background/0 lg:pl-8 lg:pr-7 lg:py-6.5 lg:backdrop-blur-none
        xl:max-w-[91rem]
        2xl:max-w-[116rem]
}
.sidenav { /* Hidden side menu */
    @apply
        fixed z-99
        flex flex-col justify-between self-end
        w-[26rem] h-full pl-5 pr-8 py-7.5
        bg-background
}

